# ASAT

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
crates/asat/: Cargo.toml
crates/asat-commands/: Cargo.toml
crates/asat-commands/src/: lib.rs  tests.rs
crates/asat-config/: Cargo.toml
crates/asat-config/src/: lib.rs  themes.rs
crates/asat-core/: Cargo.toml
crates/asat-core/src/: lib.rs
crates/asat-formula/: Cargo.toml
crates/asat-formula/src/: evaluator.rs  functions.rs  lexer.rs  lib.rs  parser.rs
crates/asat-formula/tests/: eval.rs
crates/asat-input/: Cargo.toml
crates/asat-input/src/: lib.rs
crates/asat-io/: Cargo.toml
crates/asat-io/src/: asat_driver.rs  csv_driver.rs  lib.rs  ods_driver.rs  xlsx_driver.rs
crates/asat-io/tests/: roundtrip.rs
crates/asat-plugins/: Cargo.toml
crates/asat-plugins/src/: lib.rs
crates/asat-tui/: Cargo.toml
crates/asat-tui/src/: command_line.rs  completion.rs  formula_bar.rs  formula_hint.rs  grid.rs  help.rs  lib.rs  note_popup.rs  notification.rs  plugin_manager.rs  status_bar.rs  tab_bar.rs  theme_manager.rs  welcome.rs  whichkey.rs
crates/asat/examples/: gen_demo.rs
crates/asat/src/: app.rs  ex_commands.rs  main.rs  process_action.rs
docs/: docs.html  index.html
packaging/aur/: PKGBUILD  PKGBUILD-git
packaging/homebrew/: asat.rb
